# Waving-Sketch

./: CMakeLists.txt  README.md  abstract.h
Flink/: README.md  pom.xml
SIMD/: Count_Heap.h  README.MD  ResultExample.txt  WavingSketch.h  abstract.h  benchmark.h  main.cpp  murmur3.h
Waving/: README.md
Waving/app/: README.md
Waving/app/Persistent/: CMakeLists.txt
Waving/app/change/: CMakeLists.txt  main.cpp
Waving/app/heavy-change/: Waving.h  abstract.h  data.h  out.txt
Waving/app/persistent-item/: CMakeLists.txt  Waving.h  bitset.h  data.h  main.cpp  out.txt  pie.h  small_space.h
Waving/app/super/: CMakeLists.txt
Waving/app/super-spreader/: CMakeLists.txt  Waving.h  abstract.h  bitset.h  data.h  definition.h  hash.h  main.cpp  olf.h  out.txt  tlf.h
Waving/frequent/: CMakeLists.txt  Count_Heap.h  Heap.h  README.md  USS.h  benchmark.h  hash.h  out.txt
app/: README.md
app/global-TopK/: Count.h  Count_Heap.h  README.md  StreamSummary.h  USS.h  abstract.h  benchmark.h  main.cpp
app/global-TopK/LD-Sketch/: LDSketch.hpp  hash.c  hash.h
app/join-aggregate/: README.md  main  result_plot.csv  run.py
app/join-aggregate/src/: README.md  main.cpp
app/subset-sum/: README.md  WavingSketch.h  abstract.h  benchmark.h  hash.h  ld.h  main.cpp
app/subset-sum/LD-Sketch/: LDSketch.cpp  util.h
app/topk_app/: README.md
app/topk_app/heavy-change/: CMakeLists.txt  Waving.h  abstract.h  benchmark.h  bitset.h  data.h  definition.h  fr.h  fr_cf.h  hash.h  ld.h  main.cpp
app/topk_app/heavy-change/LD-Sketch/: LDSketch.cpp  dyn_tbl.cpp  dyn_tbl.hpp  hash.h
app/topk_app/persistent-item/: CMakeLists.txt  Waving.h  abstract.h  benchmark.h  bitset.h  data.h  hash.h  main.cpp  on_off_sketch.h  pie.h  small_space.h
app/topk_app/super-spreader/: CMakeLists.txt  Waving.h  abstract.h  benchmark.h  bitset.h  data.h  hash.h  main.cpp  olf.h  opensketch.h  ss.h  tlf.h
dataset/: README.md
elastic/: CMakeLists.txt  SS.h  hash.h  main.cpp
elastic/automatic_memory_adjustment/: CMakeLists.txt  README.md  SS.h  abstract.h  benchmark.h  main.cpp
elastic/automatic_memory_adjustment/LD-Sketch/: main.cpp
elastic/compression_and_expansion/: CMakeLists.txt  Heap.h  StreamSummary.h  main.cpp
experiments/app/global-TopK/: benchmark.h  main.cpp
experiments/app/join-aggregate/: result_plot.csv
experiments/app/subset-sum/: benchmark.h  main.cpp
experiments/elastic/: README.md
experiments/elastic/automatic_memory_adjustment/: benchmark.h  main.cpp
experiments/elastic/compression_and_expansion/: README.MD  USS.h  WavingSketch.h  abstract.h  benchmark.h  hash.h
experiments/flink/: README.md  pom.xml
experiments/flink/src/: WavingSketch.java  WavingSketchTest.java
experiments/frequent/: benchmark.h  main.cpp
flink/: README.md
flink/src/: Murmur.java  WavingSketchFunction.java
frequent/: CM.h  CMakeLists.txt  README.md  SS.h  StreamSummary.h  WavingSketch.h  abstract.h  benchmark.h  hash.h  main.cpp
frequent/LD-Sketch/: dyn_tbl.cpp  dyn_tbl.hpp
include/: CM.h  Count.h  Count_Heap.h  Heap.h  SS.h  SpreadSketch.h  StreamSummary.h  USS.h  Waving.h  abstract.h  bitset.h  common.h  data.h  definition.h  fr.h  fr_cf.h  hash.h  ld.h  olf.h  on_off_sketch.h  opensketch.h  pie.h  small_space.h  tlf.h  utils.h
include/LD-Sketch/: LDSketch.cpp  LDSketch.hpp  dyn_tbl.cpp  dyn_tbl.hpp  hash.c  hash.h
include/SpreadSketch/: datatypes.hpp  spreadhash.cpp  spreadhash.h  spreadsketch.cpp  spreadsketch.hpp
src/app/: README.MD  sftp-config-alt.json  sftp-config.json
src/app/Persistent/: CMakeLists.txt  Count_Bucket.h  Makefile  Persistent.pro  Persistent.pro.user.a450a42  abstract.h  hash.h  pie.h  (+3 more)
src/frequent/: CMakeLists.txt  Count_Heap.h  Heap.h  README.MD  SS.h  StreamSummary.h  USS.h  WavingSketch.h  abstract.h  benchmark.h  hash.h  main.cpp  run.sh
(+66 files in other folders)
